@startuml

class LiquidType <<enumeration>> {
    NONE
    WATER
    LAVA
}

class LiquidSimulator {
    -width : int
    -height : int
    -tileMap : *TileMap
    -hasLiquid : vector<vector<bool>>
    -typeGrid : vector<vector<LiquidType>>
    -isSpurtBlock : vector<vector<bool>>
    -spurtTimer : vector<vector<float>>
    +update(dt : float) : void
    +render(cam : Camera2D&) : void
    +addLiquid(gx : int, gy : int, amount : uint8_t, type : LiquidType) : void
    +removeLiquid(gx : int, gy : int) : void
    +hasLiquidAt(gx : int, gy : int) : bool
    +isWaterAt(rect : Rectangle) : bool
    +isLavaAt(rect : Rectangle) : bool
    +applyFloodedFloorModifier(bottomRows : int, type : LiquidType) : void
    +updateSpurts(dt : float, playerX : float, playerY : float) : void
    -onTerrainDestroyed(data : EventData) : void
}

LiquidSimulator o-- TileMap : tileMap
LiquidSimulator *-- LiquidType : typeGrid

@enduml